@startuml
left to right direction

rectangle ROLE {
    class Visiteur{

    }
    class Redacteur{
        id : int
        mail : string
        role[] : array
        nom : varchar
        prénom : varchar
    }
    class Administrateur{}
}



class Rubrique{
    id : int
    nom : string
    date : date
    dropdown : boolean
}
class Article{
    id : int
    nom : string
    texte : text
    date : date
}
class Accueil{

}



Redacteur --|> Visiteur
Administrateur --|> Redacteur
Administrateur "*" -- "*" Redacteur : Gère >

Article "1..*" -* "1" Rubrique : Compose >
Accueil "1" *- "1" Article : Affiche
Redacteur "1" - "1..*" Rubrique : Crée >
Redacteur "*" - "*" Rubrique : Organise >
Redacteur "1" - "1..*" Article : Rédige >
Redacteur "1" - "1" Accueil : Modifie >
Visiteur "*" - "1" Accueil : Voit
@enduml